crates/test-files/fixtures/compile_errors/not_callable.fe
contract Foo:

    pub fn bar():
        5()